--- a/DummyAPI/Views/Home/Index.cshtml
+++ b/DummyAPI/Views/Home/Index.cshtml
@@ -5,19 +5,24 @@
 </div>
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
+        <h2>Overview</h2>
+        <p>
+            Dummy Web API is a simple service to create a webservice that returns static data.
+            You upload your data you want returned and the service will create a unique URI for
+            you to call in your application or even unit (or integration) tests.
+        </p>
+        <p>
+            @Html.ActionLink(@"Get started »", "Index", "Home", null, new { @class = "btn btn-default" })
+            @*<a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Start here &raquo;</a>*@
+        </p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <h2>Planned features</h2>
+        <p>View planned </p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
+        <h2>Request features</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
     </div>
