--- a/DummyAPI/Views/Home/Index.cshtml
+++ b/DummyAPI/Views/Home/Index.cshtml
@@ -1,29 +1,34 @@
 ﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
+    <h1>Dummy API</h1>
+    <p class="lead">
+        Create a web service for testing your application quickly and easily - <strong>for free!</strong>
+    </p>
     <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
 </div>
 <div class="row">
     <div class="col-md-4">
         <h2>Overview</h2>
         <p>
-            Dummy Web API is a simple service to create a webservice that returns static data.
+            Dummy Web API is a simple service to create a webservice that returns sample data.
             You upload your data you want returned and the service will create a unique URI for
             you to call in your application or even unit (or integration) tests.
         </p>
         <p>
-            @Html.ActionLink(@"Get started »", "Index", "Home", null, new { @class = "btn btn-default" })
-            @*<a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Start here &raquo;</a>*@
+            @Html.ActionLink(@"Get started »", "Create", "Home", null, new { @class = "btn btn-default" })
         </p>
     </div>
     <div class="col-md-4">
-        <h2>Planned features</h2>
-        <p>View planned </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
+        <h2>Features</h2>
+        <p>View latest releases, upcoming and planned features. Also get in touch to suggest new features.</p>
+        <p>
+            @Html.ActionLink(@"Learn more »", "Features", "Home", null, new { @class = "btn btn-default" })
+        </p>
     </div>
     <div class="col-md-4">
-        <h2>Request features</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
+        <h2>News</h2>
+        <p>Alpha released! There is no persistent storage yet so your generated web service may go down.</p>
+        <p>
+            @Html.ActionLink(@"Learn more »", "News", "Home", null, new { @class = "btn btn-default" })
+        </p>
     </div>
 </div>
