Added detail to the features

--- a/DummyAPI/Views/Home/Index.cshtml
+++ b/DummyAPI/Views/Home/Index.cshtml
@@ -19,14 +19,23 @@
     </div>
     <div class="col-md-4">
         <h2>Features</h2>
-        <p>View latest releases, upcoming and planned features. Also get in touch to suggest new features.</p>
+        <p>
+            Create a webservice to return JSON or XML or even any arbitary string constant.
+            There are plenty of features in development and in the pipeline.
+            See here to view the latest releases, upcoming and planned features.
+            Also get in touch to suggest new features.
+        </p>
         <p>
             @Html.ActionLink(@"Learn more »", "Features", "Home", null, new { @class = "btn btn-default" })
         </p>
     </div>
     <div class="col-md-4">
         <h2>News</h2>
-        <p>Alpha released! There is no persistent storage yet so your generated web service may go down.</p>
+        <p>
+            Alpha released! There is no persistent storage yet so your generated web service may go down.
+            Very soon we will offer semi-permanent webservices and maybe fully permanent web services
+            as part of a premium offer.
+        </p>
         <p>
             @Html.ActionLink(@"Learn more »", "News", "Home", null, new { @class = "btn btn-default" })
         </p>
