Added more service planned features.

--- a/DummyAPI/Views/Home/Features.cshtml
+++ b/DummyAPI/Views/Home/Features.cshtml
@@ -6,9 +6,29 @@
 <h2>Features</h2>
 
 <ul>
+    <li>Currently we only support text-based responses e.g. JSON, XML or plain text and only Http GET requests.</li>
+</ul>
+
+<h3>Planned features</h3>
+<ul>
     <li>Validation of uploaded JSON or XML with auto-detection of the uploaded string's type.</li>
     <li>Upload files to be returned (images, docx etc) - blocking binaries initially until security concerns are addressed.</li>
     <li>Setup custom headers to return.</li>
     <li>Http POST requests.</li>
     <li>Placeholders for dynamic data.</li>
+    <li>Validation of requests based on custom criteria (expected values and or value ranges)</li>
 </ul>
+
+<h3>Planned premium features</h3>
+<ul>
+    <li>Create simple rule-based web services</li>
+</ul>
+
+<h3>Not planned features</h3>
+<ul>
+    <li>Test</li>
+    <li>Test</li>
+    <li>Test</li>
+</ul>
+
+
