Created form to create a web service, managed by angular framework

--- a/DummyAPI/Content/Site.css
+++ b/DummyAPI/Content/Site.css
@@ -40,3 +40,13 @@ input[type="checkbox"].input-validation-error {
 .validation-summary-valid {
     display: none;
 }
+
+textarea.responseBody{
+    max-width:1000px;
+}
+
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
