--- a/DummyAPI/Views/Home/Index.cshtml
+++ b/DummyAPI/Views/Home/Index.cshtml
@@ -3,7 +3,10 @@
     <p class="lead">
         Create a web service for testing your application quickly and easily - <strong>for free!</strong>
     </p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    <p>
+        @*<a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a>*@
+        @Html.ActionLink(@"Get started »", "Create", "Home", null, new { @class = "btn btn-primary btn-large" })
+    </p>
 </div>
 <div class="row">
     <div class="col-md-4">
