--- a/DummyAPI/Views/Home/Create.cshtml
+++ b/DummyAPI/Views/Home/Create.cshtml
@@ -3,33 +3,41 @@
 }
 
 <h2>Create</h2>
-<div class="row">
-    <div class="col-md-8">
-        <form ng-controller="CreateServiceController" role="form">
+<div ng-controller="CreateServiceController">
+    <div class="row">
+        <div class="col-md-8">
+            <form role="form">
 
-            <div class="form-group">
-                <label for="responseBody">
-                    Enter the response body of your web service.
-                </label>
-                <textarea id="responseBody" ng-model="service.responseBody" rows="10" class="form-control responseBody" style="width:100%"></textarea>
-            </div>
+                <div class="form-group">
+                    <label for="responseBody">
+                        Enter the response body for your web service.
+                    </label>
+                    <textarea id="responseBody" ng-model="service.responseBody" rows="10" class="form-control responseBody" placeholder="Enter response data..."></textarea>
+                </div>
 
-            <button type="button" ng-click="createService(service)" class="btn btn-primary">Create</button>
-            <button type="button" ng-click="clearService(service)" class="btn btn-default">Clear</button>
+                <button type="button" ng-click="createService(service)" class="btn btn-primary">Create</button>
+                <button type="button" ng-click="clearService(service)" class="btn btn-default">Clear</button>
+                <br />
 
-            <input ng-model="service.url" type="text" class="form-control" placeholder="Click Create" readonly>
-        </form>
 
-        
+            </form>
+            <form class="form-inline" role="form">
+                <h3>Generated Url</h3>
+                <div class="form-group">
+
+                    <input id="serviceUrl" ng-model="service.url" type="text" class="form-control" placeholder="Click create above..." readonly>
+                </div>
+                <div class="form-group">
+                    <button type="button" class="btn btn-info" title="copy to clipboard"><span class="glyphicon glyphicon-share"></span></button>
+                </div>
+            </form>
+
+
+        </div>
 
     </div>
-    <div class="col-md-4 center-block">
-        <h1 class="glyphicon glyphicon-ok-circle">
-        </h1>
-    </div>
+
 </div>
-
-
 
 @section scripts
 {
