--- a/DummyAPI/Views/Home/Create.cshtml
+++ b/DummyAPI/Views/Home/Create.cshtml
@@ -6,16 +6,16 @@
 <div ng-controller="CreateServiceController">
     <div class="row">
         <div class="col-md-8">
-            <form role="form">
+            <form role="form" name="createServiceForm">
 
                 <div class="form-group">
                     <label for="responseBody">
                         Enter the response body for your web service.
                     </label>
-                    <textarea id="responseBody" ng-model="service.responseBody" rows="10" class="form-control responseBody" placeholder="Enter response data..."></textarea>
+                    <textarea id="responseBody" ng-model="service.responseBody" rows="10" class="form-control responseBody" placeholder="Enter response data..." required></textarea>
                 </div>
 
-                <button type="button" ng-click="createService(service)" class="btn btn-primary">Create</button>
+                <button type="submit" ng-click="createService(service, createServiceForm)" class="btn btn-primary">Create</button>
                 <button type="button" ng-click="clearService(service)" class="btn btn-default">Clear</button>
                 <br />
 
@@ -41,6 +41,6 @@
 
 @section scripts
 {
-
+    <script src="~/Scripts/app/Services/WebServiceGenerator.js"></script>
     <script src="~/Scripts/app/Controllers/CreateServiceController.js"></script>
 }
