--- a/DummyAPI/Views/Home/Create.cshtml
+++ b/DummyAPI/Views/Home/Create.cshtml
@@ -28,7 +28,7 @@
                     <input id="serviceUrl" ng-model="service.url" type="text" class="form-control" placeholder="Click create above..." readonly>
                 </div>
                 <div class="form-group">
-                    <button type="button" class="btn btn-info" title="copy to clipboard"><span class="glyphicon glyphicon-share"></span></button>
+                    <button id="copy-button" data-clipboard-target="serviceUrl" type="button" class="btn btn-info" title="copy to clipboard"><span class="glyphicon glyphicon-share"></span></button>
                 </div>
             </form>
 
@@ -43,4 +43,6 @@
 {
     <script src="~/Scripts/app/Services/WebServiceGenerator.js"></script>
     <script src="~/Scripts/app/Controllers/CreateServiceController.js"></script>
+    <script src="~/Scripts/zeroclipboard/ZeroClipboard.min.js"></script>
+    <script src="~/Scripts/zeroclipboard/ServiceUrlCopy.js"></script>
 }
