--- a/DummyAPI/Views/Home/Features.cshtml
+++ b/DummyAPI/Views/Home/Features.cshtml
@@ -6,11 +6,12 @@
 <h2>Features</h2>
 
 <ul>
-    <li>Currently we only support text-based responses e.g. JSON, XML or plain text and only Http GET requests.</li>
+    <li>Currently only JSON is supported. XML and plain text will be supported soon!</li>
 </ul>
 
 <h3>Planned features</h3>
 <ul>
+    <li>Add support for XML and plain text.</li>
     <li>Validation of uploaded JSON or XML with auto-detection of the uploaded string's type.</li>
     <li>Upload files to be returned (images, docx etc) - blocking binaries initially until security concerns are addressed.</li>
     <li>Setup custom headers to return.</li>
