--- a/DummyAPI/Views/Home/Index.cshtml
+++ b/DummyAPI/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
     <div class="col-md-4">
         <h2>Features</h2>
         <p>
-            Create a webservice to return JSON or XML or even any arbitary string constant.
+            Create a webservice to return JSON (XML and plain text will be supported soon).
             There are plenty of features in development and in the pipeline.
             See here to view the latest releases, upcoming and planned features.
             Also get in touch to suggest new features.
