--- a/DummyAPI/Views/Home/Features.cshtml
+++ b/DummyAPI/Views/Home/Features.cshtml
@@ -3,21 +3,18 @@
     ViewBag.Title = "Features";
 }
 
-<h2>Features</h2>
+<h2>Features <span class="glyphicon glyphicon-ok-sign"></span></h2>
 
 <ul>
-    <li>Currently only JSON is supported. XML and plain text will be supported soon!</li>
+    <li>Currently only supports creation of the HTTP body response. (JSON, XML and plain text)</li>
 </ul>
 
 <h3>Planned features</h3>
 <ul>
-    <li>Add support for XML and plain text.</li>
     <li>Validation of uploaded JSON or XML with auto-detection of the uploaded string's type.</li>
-
-
     <li>Upload files to be returned (images, docx etc) - blocking binaries initially until security concerns are addressed.</li>
     <li>Setup custom headers to return.</li>
-    <li>Http POST requests.</li>
+    <li>HTTP POST requests.</li>
     <li>Placeholders for dynamic data.</li>
     <li>Validation of requests based on custom criteria (expected values and or value ranges)</li>
 </ul>
