--- a/DummyAPI/Views/Home/Index.cshtml
+++ b/DummyAPI/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="jumbotron">
     <h1>Dummy API</h1>
     <p class="lead">
-        Create a web service for testing your application quickly and easily - <strong>for free!</strong>
+        Create a web service for testing your application quickly and easily.
     </p>
     <p>
         @Html.ActionLink(@"Get started »", "Create", "Home", null, new { @class = "btn btn-primary btn-large" })
@@ -22,10 +22,10 @@
     <div class="col-md-4">
         <h2>Features</h2>
         <p>
-            Create a webservice to return JSON (XML and plain text will be supported soon).
+            Create a webservice to return JSON, XML or plain text .
             There are plenty of features in development and in the pipeline.
             See here to view the latest releases, upcoming and planned features.
-            Also get in touch to suggest new features.
+            @*Also get in touch to suggest new features. TODO Create email address*@
         </p>
         <p>
             @Html.ActionLink(@"Learn more »", "Features", "Home", null, new { @class = "btn btn-default" })
