--- a/DummyAPI/Views/Home/Create.cshtml
+++ b/DummyAPI/Views/Home/Create.cshtml
@@ -15,11 +15,11 @@
                     </label>
 
 
-                    <textarea id="responseBody" ng-model="service.responseBody" rows="10" class="form-control responseBody" placeholder="Enter response data..." required></textarea>
+                    <textarea id="responseBody" ng-model="response.body" rows="10" class="form-control responseBody" placeholder="Enter response data..." required></textarea>
                 </div>
 
-                <button type="submit" ng-click="createService(service, createServiceForm)" class="btn btn-primary">Create</button>
-                <button type="button" ng-click="clearService(service)" class="btn btn-default">Clear</button>
+                <button type="submit" ng-click="createService(response, createServiceForm)" class="btn btn-primary">Create</button>
+                <button type="button" ng-click="clearService(response)" class="btn btn-default">Clear</button>
                 <br />
 
 
@@ -28,7 +28,7 @@
                 <h3>Generated Url</h3>
                 <div class="form-group">
 
-                    <input id="serviceUrl" ng-model="service.url" type="text" class="form-control" placeholder="Click create above..." readonly>
+                    <input id="serviceUrl" ng-model="response.url" type="text" class="form-control" placeholder="Click create above..." readonly>
                 </div>
                 <div class="form-group">
                     <button id="copy-button" data-clipboard-target="serviceUrl" type="button" class="btn btn-info" title="copy to clipboard"><span class="glyphicon glyphicon-share"></span></button>
@@ -39,8 +39,9 @@
         </div>
         <div class="col-md-2">
             
+            <div class="row"><br /><br /></div>
+            <div class="row"><content-type-info-stack text="{{response.body}}"/></div>
             
-            <text-format-validation-message text="{{service.responseBody}}" />
 
         </div>
 
@@ -51,8 +52,9 @@
 @section scripts
 {
     <script src="~/Scripts/app/Services/Validation/JSONValidator.js"></script>
+<script src="~/Scripts/app/Services/Validation/contentTypeValidator.js"></script>
+<script src="~/Scripts/app/Directives/ContentTypeInfoStack.js"></script>
     <script src="~/Scripts/app/Services/WebServiceGenerator.js"></script>
-<script src="~/Scripts/app/Directives/TextFormatValidationMessage.js"></script>
     <script src="~/Scripts/app/Controllers/CreateServiceController.js"></script>
     <script src="~/Scripts/zeroclipboard/ZeroClipboard.min.js"></script>
     <script src="~/Scripts/zeroclipboard/ServiceUrlCopy.js"></script>
