--- a/DummyAPI/Views/Home/Create.cshtml
+++ b/DummyAPI/Views/Home/Create.cshtml
@@ -5,25 +5,41 @@
 <h2>Create response</h2>
 <div ng-controller="CreateServiceController">
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-12">
             <form role="form" name="createServiceForm">
-
-                <div class="form-group">
-
-                    <label for="responseBody">
-                        Enter the response body for your web service.
-                    </label>
-
-
-                    <textarea id="responseBody" ng-model="response.body" rows="10" class="form-control responseBody" placeholder="Enter response data..." required></textarea>
+                <div class="row">
+                    <div class="form-group">
+                        <div class="col-md-8">
+                            <label for="responseBody">
+                                Enter the response body for your web service.
+                            </label>
+                        </div>
+                    </div>
                 </div>
-
-                <button type="submit" ng-click="createService(response, createServiceForm)" class="btn btn-primary">Create</button>
-                <button type="button" ng-click="clearService(response)" class="btn btn-default">Clear</button>
+                <div class="row">
+                    <div class="form-group">
+                        <div class="col-sm-10 col-md-8">
+                            <textarea id="responseBody" ng-model="response.body" rows="10" class="form-control responseBody" placeholder="Enter response data..." required></textarea>
+                        </div>
+                        <div class="col-sm-2 col-md-2 hidden-xs">
+                            <div class="row"><content-type-info-stack text="{{response.body}}" /></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="form-group">
+                                <button type="submit" ng-click="createService(response, createServiceForm)" class="btn btn-primary">Create</button>
+                                <button type="button" ng-click="clearService(response)" class="btn btn-default">Clear</button>
+                            </div>
+                    </div>
+                </div>
                 <br />
 
 
             </form>
+        </div>
+        <div class="col-md-12">
             <form class="form-inline" role="form">
                 <h3>Generated Url</h3>
                 <div class="form-group">
@@ -34,14 +50,13 @@
                     <button id="copy-button" data-clipboard-target="serviceUrl" type="button" class="btn btn-info" title="copy to clipboard"><span class="glyphicon glyphicon-share"></span></button>
                 </div>
             </form>
-
-
         </div>
+
         <div class="col-md-2">
-            
+
             <div class="row"><br /><br /></div>
-            <div class="row"><content-type-info-stack text="{{response.body}}"/></div>
-            
+
+
 
         </div>
 
@@ -52,8 +67,8 @@
 @section scripts
 {
     <script src="~/Scripts/app/Services/Validation/JSONValidator.js"></script>
-<script src="~/Scripts/app/Services/Validation/contentTypeValidator.js"></script>
-<script src="~/Scripts/app/Directives/ContentTypeInfoStack.js"></script>
+    <script src="~/Scripts/app/Services/Validation/contentTypeValidator.js"></script>
+    <script src="~/Scripts/app/Directives/ContentTypeInfoStack.js"></script>
     <script src="~/Scripts/app/Services/WebServiceGenerator.js"></script>
     <script src="~/Scripts/app/Controllers/CreateServiceController.js"></script>
     <script src="~/Scripts/zeroclipboard/ZeroClipboard.min.js"></script>
