--- a/DummyAPI/Views/Home/Create.cshtml
+++ b/DummyAPI/Views/Home/Create.cshtml
@@ -29,9 +29,9 @@
                 <div class="row">
                     <div class="col-md-8">
                         <div class="form-group">
-                                <button type="submit" ng-click="createService(response, createServiceForm)" class="btn btn-primary">Create</button>
-                                <button type="button" ng-click="clearService(response)" class="btn btn-default">Clear</button>
-                            </div>
+                            <button type="submit" ng-click="createService(response, createServiceForm)" class="btn btn-primary">Create</button>
+                            <button type="button" ng-click="clearService(response)" class="btn btn-default">Clear</button>
+                        </div>
                     </div>
                 </div>
                 <br />
@@ -66,6 +66,8 @@
 
 @section scripts
 {
+
+    <script src="~/Scripts/app/Services/Validation/XMLValidator.js"></script>
     <script src="~/Scripts/app/Services/Validation/JSONValidator.js"></script>
     <script src="~/Scripts/app/Services/Validation/contentTypeValidator.js"></script>
     <script src="~/Scripts/app/Directives/ContentTypeInfoStack.js"></script>
