Updated feature message

--- a/DummyAPI/Views/Home/Features.cshtml
+++ b/DummyAPI/Views/Home/Features.cshtml
@@ -6,12 +6,12 @@
 <h2>Features <span class="glyphicon glyphicon-ok-sign"></span></h2>
 
 <ul>
-    <li>Currently only supports creation of the HTTP body response. (JSON, XML and plain text)</li>
+    <li>Currently only supports creation of the HTTP body response. (JSON, XML and plain text). </li>
+    <li>The validator will indicate if the string is valid JSON or XML and will warm when it is not.</li>
 </ul>
 
 <h3>Planned features</h3>
 <ul>
-    <li>Validation of uploaded JSON or XML with auto-detection of the uploaded string's type.</li>
     <li>Upload files to be returned (images, docx etc) - blocking binaries initially until security concerns are addressed.</li>
     <li>Setup custom headers to return.</li>
     <li>HTTP POST requests.</li>
