Feature typo fix

--- a/DummyAPI/Views/Home/Features.cshtml
+++ b/DummyAPI/Views/Home/Features.cshtml
@@ -7,7 +7,7 @@
 
 <ul>
     <li>Currently only supports creation of the HTTP body response. (JSON, XML and plain text). </li>
-    <li>The validator will indicate if the string is valid JSON or XML and will warm when it is not.</li>
+    <li>The validator will indicate if the string is valid JSON or XML and will warn when it is not.</li>
 </ul>
 
 <h3>Planned features</h3>
