--- a/DummyAPI/Content/Site.css
+++ b/DummyAPI/Content/Site.css
@@ -51,3 +51,36 @@ textarea.responseBody{
   margin-right: auto;
 }
 
+
+/*Create page*/
+/*TODO Get this working!!!*/
+/*http://odetocode.com/blogs/scott/archive/2014/02/25/easy-animations-for-angularjs-with-animate-css.aspx*/
+/*.animate-vertical-show {
+  line-height:20px;
+  opacity:1;
+  padding:10px;
+  border:1px solid black;
+  background:white;
+}
+
+.animate-vertical-show.ng-hide-add.ng-hide-add-active,
+.animate-vertical-show.ng-hide-remove.ng-hide-remove-active {
+  -webkit-transition:all linear 2s;
+  transition:all linear 2s;
+  background:red;
+}
+
+.animate-vertical-show.ng-hide{
+    line-height:0;
+  opacity:0;
+  padding:0 10px;
+}
+
+.animate-vertical-show.ng-hide-add{
+    line-height:0;
+  opacity:1;
+  padding:0 10px;
+  background:red;
+}*/
+
+/*End of create page animate*/
