--- a/DummyAPI/Views/Home/Create.cshtml
+++ b/DummyAPI/Views/Home/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "RestPonder";
 }
 
 <h2>Create response</h2>
@@ -9,13 +9,39 @@
             <form role="form" name="createServiceForm">
                 <div class="row">
                     <div class="form-group">
-                        <div class="col-md-8">
+                        <div class="col-md-6">
                             <label for="responseBody">
                                 Enter the response body for your web service.
                             </label>
                         </div>
+                        <div class="col-md-4">
+                            <button type="button" ng-click="toggleShowHeader()" class="btn btn-default">Headers ({{headers.length}})</button>
+                        </div>
                     </div>
                 </div>
+                <div class="form-inline" ng-show="showHeader">
+                    <div class="row" ng-repeat="header in headers">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Header" ng-model="header.name">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Value" ng-model="header.value">
+                            </div>
+
+                            <button type="button" ng-click="removeHeader(header)" class="btn btn-danger btn-xs">X</button>
+                        </div>
+                       
+                    </div>
+                    
+                    <div>
+                        <button type="button" ng-click="addHeader()" class="btn btn-info">Add</button>
+                    </div>
+                </div>
+
+
+                <br />
+
                 <div class="row">
                     <div class="form-group">
                         <div class="col-sm-10 col-md-8">
@@ -26,6 +52,7 @@
                         </div>
                     </div>
                 </div>
+                <br />
                 <div class="row">
                     <div class="col-md-8">
                         <div class="form-group">
