--- a/DummyAPI/Views/Shared/_Layout.cshtml
+++ b/DummyAPI/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     <script src="~/Scripts/angular.min.js"></script>
+    <script src="~/Scripts/angular-animate.min.js"></script>
     <script src="~/Scripts/app/app.js"></script>
     @RenderSection("scripts", required: false)
 </body>
