--- a/DummyAPI/Views/Edit/Index.cshtml
+++ b/DummyAPI/Views/Edit/Index.cshtml
@@ -29,7 +29,7 @@
                 <div class="row">
                     <div class="col-md-8">
                         <div class="form-group">
-                            <button type="submit" ng-click="updateService(@ViewBag.Id, response, createServiceForm)" class="btn btn-primary">Update</button>
+                            <button type="submit" ng-click="updateService('@ViewBag.Id', response, createServiceForm)" class="btn btn-primary">Update</button>
                             <button type="button" ng-click="clearService(response)" class="btn btn-default">Revert (todo implementation)</button>
                         </div>
                     </div>
