--- a/DummyAPI/Views/Edit/Api.cshtml
+++ b/DummyAPI/Views/Edit/Api.cshtml
@@ -2,8 +2,8 @@
     ViewBag.Title = "Restponder";
 }
 
-<h2>Create response</h2>
-<div ng-controller="CreateServiceController">
+<h2>Edit response</h2>
+<div ng-controller="UpdateServiceController" data-ng-init="init('@ViewBag.Id', '@ViewBag.Url')">
     <div class="row">
         <div class="col-md-12">
             <form role="form" name="createServiceForm">
@@ -11,7 +11,7 @@
                     <div class="form-group">
                         <div class="col-md-8">
                             <label for="responseBody">
-                                Enter the response body for your web service.
+                                @*Enter the response body for your web service.*@
                             </label>
                         </div>
                     </div>
@@ -19,7 +19,7 @@
                 <div class="row">
                     <div class="form-group">
                         <div class="col-sm-10 col-md-8">
-                            <textarea id="responseBody" ng-model="response.body" rows="10" class="form-control responseBody" placeholder="Enter response data..." required></textarea>
+                            <textarea id="responseBody" ng-model="response.body" rows="10" class="form-control responseBody" placeholder="Enter response data..." required>{{response.body}}</textarea>
                         </div>
                         <div class="col-sm-2 col-md-2 hidden-xs">
                             <div class="row"><content-type-info-stack text="{{response.body}}" /></div>
@@ -30,8 +30,8 @@
                 <div class="row">
                     <div class="col-md-8">
                         <div class="form-group">
-                            <button type="submit" ng-click="createService(response, createServiceForm)" class="btn btn-primary">Create</button>
-                            <button type="button" ng-click="clearService(response)" class="btn btn-default">Clear</button>
+                            <button type="submit" ng-click="updateService('@ViewBag.Id', response, createServiceForm)" class="btn btn-primary">Update</button>
+                            <button type="button" ng-click="undoChanges()" class="btn btn-default" title="Revert to original response body">Undo</button>
                         </div>
                     </div>
                 </div>
@@ -45,11 +45,10 @@
                 <h3>Generated Url</h3>
                 <div class="form-group">
 
-                    <input id="serviceUrl" ng-model="response.url" type="text" class="form-control" placeholder="Click create above..." readonly>
+                    <input id="serviceUrl" ng-model="response.url" type="text" class="form-control" placeholder="Click create above..." readonly value="" />
                 </div>
                 <div class="form-group">
                     <button id="copy-button" data-clipboard-target="serviceUrl" type="button" class="btn btn-info" title="copy to clipboard"><span class="glyphicon glyphicon-share"></span></button>
-                    <button type="submit" ng-click="editApi(createServiceForm)" class="btn btn-primary">Edit</button>
                 </div>
             </form>
         </div>
@@ -74,7 +73,7 @@
     <script src="~/Scripts/app/Services/Validation/contentTypeValidator.js"></script>
     <script src="~/Scripts/app/Directives/ContentTypeInfoStack.js"></script>
     <script src="~/Scripts/app/Services/WebServiceGenerator.js"></script>
-    <script src="~/Scripts/app/Controllers/CreateServiceController.js"></script>
+    <script src="~/Scripts/app/Controllers/UpdateServiceController.js"></script>
     <script src="~/Scripts/zeroclipboard/ZeroClipboard.min.js"></script>
     <script src="~/Scripts/zeroclipboard/ServiceUrlCopy.js"></script>
 }
