Updated site title

--- a/DummyAPI/Views/Home/Create.cshtml
+++ b/DummyAPI/Views/Home/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Restponder";
+    ViewBag.Title = "Restponder - Create Static Web Services";
 }
 
 <h2>Create response</h2>
