--- a/DummyAPI/Views/Home/Create.cshtml
+++ b/DummyAPI/Views/Home/Create.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Restponder - Create Mock Web Services";
+    ViewBag.Title = "Restponder - Create Simple Mock Web Services";
 }
 
-<h2>Create response</h2>
+<h2>Create mock service</h2>
 <div ng-controller="CreateServiceController">
     <div class="row">
         <div class="col-md-12">
@@ -11,7 +11,7 @@
                     <div class="form-group">
                         <div class="col-md-8">
                             <label for="responseBody">
-                                Enter the response body for your web service.
+                                Quickly create mock web services to quickly test your app. Supports Json, XML and plain text.
                             </label>
                         </div>
                     </div>
