--- a/DummyAPI/Views/Shared/_Layout.cshtml
+++ b/DummyAPI/Views/Shared/_Layout.cshtml
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <meta name="description" content="This online too allows you to quickly define mock web service endpoints and have them return JSON, XML or plain text data.">
+    <meta name="keywords" content="web, service, mock, json, webservice, json, xml, test, rest, api, developers, integration, app">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
