added angular bundle

--- a/DummyAPI/Views/Shared/_Layout.cshtml
+++ b/DummyAPI/Views/Shared/_Layout.cshtml
@@ -40,8 +40,8 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-
-    @Scripts.Render("~/Scripts/angular.min.js", "~/Scripts/app/app.js")
+    @Scripts.Render("~/bundles/angularapp")
+    @*@Scripts.Render("~/Scripts/angular.min.js", "~/Scripts/app/app.js")*@
     @*<script src="~/Scripts/angular.min.js"></script>
     <script src="~/Scripts/app/app.js"></script>*@
     @RenderSection("scripts", required: false)
