unbundle  angular scripts

--- a/DummyAPI/Views/Home/Create.cshtml
+++ b/DummyAPI/Views/Home/Create.cshtml
@@ -60,5 +60,12 @@
 
 @section scripts
 {
-    @Scripts.Render("~/bundles/app/create")
+    <script src="~/Scripts/app/Services/Validation/XMLValidator.js"></script>
+<script src="~/Scripts/app/Services/Validation/JSONValidator.js"></script>
+<script src="~/Scripts/app/Services/Validation/contentTypeValidator.js"></script>
+<script src="~/Scripts/app/Directives/ContentTypeInfoStack.js"></script>
+<script src="~/Scripts/app/Services/WebServiceGenerator.js"></script>
+<script src="~/Scripts/app/Controllers/CreateServiceController.js"></script>
+<script src="~/Scripts/zeroclipboard/ZeroClipboard.min.js"></script>
+<script src="~/Scripts/zeroclipboard/ServiceUrlCopy.js"></script>
 }
