--- a/DummyAPI/Views/Home/Create.cshtml
+++ b/DummyAPI/Views/Home/Create.cshtml
@@ -3,7 +3,7 @@
 }
 
 <h2>Create mock service</h2>
-<div ng-controller="CreateServiceController">
+<div ng-controller="CreateMockServiceController">
     <div class="row">
         <div class="col-md-12">
             <form role="form" name="createServiceForm">
@@ -22,7 +22,7 @@
                             <textarea id="responseBody" ng-model="response.body" rows="10" class="form-control responseBody" placeholder="Enter response data..." required></textarea>
                         </div>
                         <div class="col-sm-2 col-md-2 hidden-xs">
-                            <div class="row"><content-type-info-stack text="{{response.body}}" /></div>
+                            <div class="row"><content-type-stack text="{{response.body}}" /></div>
                         </div>
                     </div>
                 </div>
@@ -63,9 +63,9 @@
     <script src="~/Scripts/app/Services/Validation/XMLValidator.js"></script>
 <script src="~/Scripts/app/Services/Validation/JSONValidator.js"></script>
 <script src="~/Scripts/app/Services/Validation/contentTypeValidator.js"></script>
-<script src="~/Scripts/app/Directives/ContentTypeInfoStack.js"></script>
+<script src="~/Scripts/app/Directives/ContentTypeStack.js"></script>
 <script src="~/Scripts/app/Services/WebServiceGenerator.js"></script>
-<script src="~/Scripts/app/Controllers/CreateServiceController.js"></script>
+<script src="~/Scripts/app/Controllers/CreateMockServiceController.js"></script>
 <script src="~/Scripts/zeroclipboard/ZeroClipboard.min.js"></script>
 <script src="~/Scripts/zeroclipboard/ServiceUrlCopy.js"></script>
 }
