Fix typo on site description meta

--- a/DummyAPI/Views/Home/Create.cshtml
+++ b/DummyAPI/Views/Home/Create.cshtml
@@ -66,6 +66,9 @@
 <script src="~/Scripts/app/Directives/ContentTypeStack.js"></script>
 <script src="~/Scripts/app/Services/WebServiceGenerator.js"></script>
 <script src="~/Scripts/app/Controllers/CreateMockServiceController.js"></script>
+
+    @*@Scripts.Render("~/bundles/app/create")*@
+
 <script src="~/Scripts/zeroclipboard/ZeroClipboard.min.js"></script>
 <script src="~/Scripts/zeroclipboard/ServiceUrlCopy.js"></script>
 }
