--- a/DummyAPI/Views/Home/Create.cshtml
+++ b/DummyAPI/Views/Home/Create.cshtml
@@ -60,14 +60,14 @@
 
 @section scripts
 {
-    <script src="~/Scripts/app/Services/Validation/XMLValidator.js"></script>
+    @*<script src="~/Scripts/app/Services/Validation/XMLValidator.js"></script>
 <script src="~/Scripts/app/Services/Validation/JSONValidator.js"></script>
 <script src="~/Scripts/app/Services/Validation/contentTypeValidator.js"></script>
 <script src="~/Scripts/app/Directives/ContentTypeStack.js"></script>
 <script src="~/Scripts/app/Services/WebServiceGenerator.js"></script>
-<script src="~/Scripts/app/Controllers/CreateMockServiceController.js"></script>
+<script src="~/Scripts/app/Controllers/CreateMockServiceController.js"></script>*@
 
-    @*@Scripts.Render("~/bundles/app/create")*@
+    @Scripts.Render("~/bundles/app/create")
 
 <script src="~/Scripts/zeroclipboard/ZeroClipboard.min.js"></script>
 <script src="~/Scripts/zeroclipboard/ServiceUrlCopy.js"></script>
