--- a/DummyAPI/Views/Edit/Index.cshtml
+++ b/DummyAPI/Views/Edit/Index.cshtml
@@ -5,17 +5,41 @@
 <h2>Edit response</h2>
 <div ng-controller="EditServiceController" data-ng-init="init()">
 
-    <div ng-repeat="service in services">
-        <div class="row">
+    @*<div >
+        <div class="row" ng-repeat="service in services">
             <div class="panel panel-default">
                 <div class="panel-body">
-                    <div class="col-md-2"> <strong>{{service.name}}</strong></div>
-                    <div class="col-md-2">{{service.editUrl}}</div>
+                    <div class="col-md-2"><a href="{{service.editUrl}}"><strong>{{service.name}}</strong></a> </div>
+                    <div class="col-md-2"></div>
                 </div>
             </div>
-            
+
         </div>
-    </div>
+        </div>*@
+
+    <table class="table table-striped table-hover table-bordered">
+        <tr>
+            <th>Service name</th>
+            <th></th>
+        </tr>
+        <tr ng-repeat="service in services">
+            <td>
+                <a href="{{service.editUrl}}">{{service.name}}</></a>
+            </td>
+            <td>
+                
+                <input id="input-{{service.key}}" ng-model="service.url" class="form-control" placeholder="Click create above..." readonly type="hidden">
+                <button id="copy-button" data-clipboard-target="input-{{service.key}}" type="button" class="btn btn-info btn-xs" title="copy to clipboard"><span class="glyphicon glyphicon-share"></span></button>
+                <button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></span></button>
+            </td>
+
+        </tr>
+        <tr>
+            <td>
+                <a href="/"><h4><span class="glyphicon glyphicon-plus-sign"></span> Create New</h4></a>
+            </td>
+        </tr>
+    </table>
 
 </div>
 
