--- a/DummyAPI/Views/Edit/Api.cshtml
+++ b/DummyAPI/Views/Edit/Api.cshtml
@@ -21,8 +21,9 @@
                         <div class="col-sm-10 col-md-8">
                             <textarea id="responseBody" ng-model="response.body" rows="10" class="form-control responseBody" placeholder="Enter response data..." required>{{response.body}}</textarea>
                         </div>
-                        <div class="col-sm-2 col-md-2 hidden-xs">
-                            <div class="row"><content-type-stack text="{{response.body}}" /></div>
+                        <div class="col-sm-2 col-xs-8 col-md-2">
+                            <div class="hidden-xs"><content-type-stack button-group-class="'btn-group-vertical'" text="{{service.body}}" /></div>
+                            <div class="visible-xs hidden-md hidden-lg"><br /><content-type-stack button-group-class="'btn-group btn-group-xs'" text="{{service.body}}" /></div>
                         </div>
                     </div>
                 </div>
