--- a/DummyAPI/Views/Shared/_Layout.cshtml
+++ b/DummyAPI/Views/Shared/_Layout.cshtml
@@ -45,5 +45,8 @@
     <script src="~/Scripts/angular.min.js"></script>
     <script src="~/Scripts/app/app.js"></script>
     @RenderSection("scripts", required: false)
+
+    <script></script>
+
 </body>
 </html>
