Text changes  - Updated Edit section to be called History for clarity

--- a/Restponder/Views/Edit/Index.cshtml
+++ b/Restponder/Views/Edit/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Restponder";
 }
 
-<h2>Edit response</h2>
+<h2>History</h2>
 <div ng-controller="EditServiceController" data-ng-init="init()">
 
 
