--- a/Restponder/Views/Shared/_Layout.cshtml
+++ b/Restponder/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Create", "Create", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("Edit", "Index", "Edit", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("History", "Index", "Edit", new { area = "" }, null)</li>
                 </ul>
             </div>
         </div>
