--- a/Restponder/Views/Edit/Api.cshtml
+++ b/Restponder/Views/Edit/Api.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Restponder";
 }
 
-<h2>Edit response</h2>
+<h2>Edit service</h2>
 <div ng-controller="UpdateServiceController" data-ng-init="init('@ViewBag.Id', '@ViewBag.Url')">
     <div class="row">
         <div class="col-md-12">
@@ -31,7 +31,7 @@
                 <div class="row">
                     <div class="col-md-8">
                         <div class="form-group">
-                            <button type="submit" ng-click="updateService('@ViewBag.Id', response, createServiceForm)" class="btn btn-primary">Update</button>
+                            <button type="submit" ng-click="updateService('@ViewBag.Id', response, createServiceForm)" class="btn btn-primary" title="Saves updates">Update</button>
                             <button type="button" ng-click="undoChanges()" class="btn btn-default" title="Revert to original response body">Undo</button>
                         </div>
                     </div>
